# yelp-ads-bidding-ctr

./: .gitignore  Dockerfile.huggingface  README.md  README_HUGGINGFACE.md  app.py  pyproject.toml  requirements-huggingface.txt  requirements.txt
app/: streamlit_app.py
models/: best_deepfm.pt  deepfm_calib.pt  deepfm_default.pt  deepfm_e16_2_layers_d0.1.pt  deepfm_e16_2_layers_d0.3.pt  deepfm_e16_2_layers_d0.5.pt  deepfm_e16_3_layers_d0.1.pt  deepfm_e16_3_layers_d0.3.pt  deepfm_e16_3_layers_d0.5.pt  deepfm_e16_4_layers_d0.1.pt  deepfm_e16_4_layers_d0.3.pt  deepfm_e16_4_layers_d0.5.pt  deepfm_e4_2_layers_d0.1.pt  deepfm_e4_2_layers_d0.3.pt  deepfm_e4_2_layers_d0.5.pt  deepfm_e4_3_layers_d0.1.pt  deepfm_e4_3_layers_d0.3.pt  deepfm_e4_3_layers_d0.5.pt  deepfm_e4_4_layers_d0.1.pt  deepfm_e4_4_layers_d0.3.pt  deepfm_e4_4_layers_d0.5.pt  deepfm_e8_2_layers_d0.1.pt  deepfm_e8_2_layers_d0.3.pt  deepfm_e8_2_layers_d0.5.pt  deepfm_e8_3_layers_d0.1.pt  deepfm_e8_3_layers_d0.3.pt  deepfm_e8_3_layers_d0.5.pt  deepfm_e8_4_layers_d0.1.pt  deepfm_e8_4_layers_d0.3.pt  deepfm_e8_4_layers_d0.5.pt  deepfm_smoke.pt  feature_config.json  history_default.json  history_e16_2_layers_d0.1.json  history_e16_2_layers_d0.3.json  history_e16_2_layers_d0.5.json  history_e16_3_layers_d0.1.json  history_e16_3_layers_d0.3.json  history_e16_3_layers_d0.5.json  history_e16_4_layers_d0.1.json  (+25 more)
notebooks/: 01_eda.ipynb  02_ad_data_analysis.ipynb  03_baseline_models.ipynb  04_deepfm_training.ipynb  04b_calibration.ipynb  05_auction_analysis.ipynb  06_resume_claims_verification.ipynb
src/: __init__.py  (+1 more)
(+37 files in other folders)
